# PaLM-2.0-Rust-SDK

./: .env  Cargo.toml  README.md
entities/: build_history.rs  eating_preferences.rs  ingredient.rs  inventory.rs  mod.rs  prelude.rs  recipe.rs  recipe_ingredients_linker.rs  sea_orm_active_enums.rs  users.rs
src/: client.rs  default.rs  entities.rs  lib.rs  query.rs  query_builder.rs  resource.rs
tests/: tests.rs
