[package]
name = "palm2-sdk"
version = "0.1.0"
edition = "2021"

[[test]]
name = "tests"
path = "tests/tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = "0.11.18"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
http = "0.2.9"
regex = "1.9.1"