[package]
name = "palm2-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
license-file = "LICENSE"
description = "The PaLM-2.0-Rust-SDK is an innovative software development kit that empowers developers to harness the power of the cutting-edge of Google's PaLM 2.0 technology using the Rust programming language. With this SDK, you can seamlessly integrate PaLM 2.0's advanced features into your Rust projects and create intelligent applications like never before. 💡"
homepage = "https://github.com/NovX-Education/PaLM-2.0-Rust-SDK/"
documentation = "https://github.com/NovX-Education/PaLM-2.0-Rust-SDK/blob/main/README.md"
repository = "https://github.com/NovX-Education/PaLM-2.0-Rust-SDK/"
readme = "README.md"
exclude = [ "tests/*" ]

[[test]]
name = "tests"
path = "tests/tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = "0.11.18"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
http = "0.2.9"
regex = "1.9.1"